<resources>
    <string name="app_name">cuda</string>
    <string name="select_day_time">選択された日時:</string>
    <string name="select">日時選択</string>
    <string name="weather_view">天気を表示</string>
    <string name="selected_area">エリアを選択する</string>
    <string name="weekly_weather">1週間の天気</string>
    <string name="weekly_weather_button">一週間の天気を表示</string>
    <string name="chart_precipitation">一週間の天気と降水確率のグラフ</string>
    <string name="local_area_select">地域ごと</string>
</resources>