<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/selectedDateTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_day_time"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/showDateTimePickerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/blue"/>

    <Button
        android:id="@+id/showWeatherButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weather_view"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/blue"/>

    <Button
        android:id="@+id/showListViewButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selected_area"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/blue"/>

    <Button
        android:id="@+id/showWeeklyWeatherButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weekly_weather_button"
        android:visibility="gone"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/blue"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:padding="8dp">

        <TextView
            android:id="@+id/weatherResultTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="16sp"
            android:padding="8dp" />

    </ScrollView>

</LinearLayout>
